# hipocampo

./: AGENT.md  Cargo.toml  PHASE2_REPORT.md  PHASE3_PROGRESS.md  PROJECT_COMPLETE.md  README.md  SCOPE.md  SPEC.md
adapters/: README.md
adapters/openclaw/: README.md  package-lock.json  package.json  tsconfig.json
adapters/openclaw/src/: adapter.ts  index.test.ts  index.ts  types.ts
core/: embedding.rs  memory.rs  memory.ts
docs/: architecture.md  openclaw-analysis.md  zeroclaw-analysis.md
memory/: hipocampo.db
research/: memsearch-analysis.md  openclaw-analysis.md  zeroclaw-analysis.md
src/: indexer.rs  lib.rs  main.rs
src/adapters/: mod.rs  zeroclaw.rs
src/embedding/: mod.rs  openai.rs
src/memory/: mod.rs
src/search/: hybrid.rs  mmr.rs  mod.rs  temporal_decay.rs
src/storage/: mod.rs  sqlite.rs
src/utils/: chunker.rs  hash.rs  mod.rs
